// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon ArrowLeft renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414z"
  />
</svg>
`;

exports[`Icon ArrowUp renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M13 7.828V20h-2V7.828l-5.364 5.364-1.414-1.414L12 4l7.778 7.778-1.414 1.414L13 7.828z"
  />
</svg>
`;

exports[`Icon Circle renders correctly 1`] = `
<svg
  clip-rule="evenodd"
  fill-rule="evenodd"
  height="1em"
  stroke-linejoin="round"
  stroke-miterlimit="2"
  viewBox="0 0 24 24"
  width="1em"
>
  <circle
    cx="12"
    cy="12"
    r="9.967"
  />
</svg>
`;

exports[`Icon Information renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"
  />
</svg>
`;

exports[`Icon Lock renders correctly 1`] = `
<svg
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M19 10h1a1 1 0 011 1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V11a1 1 0 011-1h1V9a7 7 0 1114 0v1zM5 12v8h14v-8H5zm6 2h2v4h-2v-4zm6-4V9A5 5 0 007 9v1h10z"
  />
</svg>
`;
